# nexus7-ros-pkg

./: .gitignore  bash_tools.sh  build_and_install.sh  create_overlay_ws.sh  launch_nexus5_imu_rviz_demo.sh  launch_nexus_imu_rviz_demo.sh  launch_vlp16_imu_rviz_demo.sh  set_env.sh
nexus7_bringup/: CMakeLists.txt  package.xml  setup.py
nexus7_bringup/config/: imu_demo.rviz
nexus7_bringup/launch/: nexus5_imu_rviz_demo.launch  nexus7_imu_rviz_demo.launch  vlp16_imu_rviz_demo.launch
nexus7_description/: CMakeLists.txt  package.xml
nexus7_description/launch/: upload_nexus5.launch  upload_nexus7.launch  upload_vlp16.launch
nexus7_description/meshes/: VLP16.dae  nexus7.dae
nexus7_description/meshes/lg-nexus-5.1/: NEXUS 5.STEP
nexus7_description/urdf/: nexus5.urdf  nexus7.urdf  vlp16.urdf
