<?xml version="1.0"?>
<package>
  <name>nexus7_bringup</name>
  <version>1.1.5</version>
  <description>
    This package contains launch files and configuration for the Google/ASUS Nexus 7.
  </description>
  <author>Chad Rockey</author>
  <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/nexus7_description</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nexus7_description</run_depend>
  <export>
  </export>
</package>
